--- a/React-Projects/ToDoListApp/todolist/src/App.css
+++ b/React-Projects/ToDoListApp/todolist/src/App.css
@@ -1,42 +1,94 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+h1 {
   text-align: center;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body {
+  background: grey
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+#todo-list {
+  width: 500px;
+  margin: 60px auto;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form, .todo {
+  border: 1px solid rgb(15, 26, 61);
+  padding: 10px 20px;
+  margin-bottom: 10px;
+}
+form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+form input {
+  padding: 4px 8px;
+  flex-grow: 1;
+  margin-right: 16px;
+}
+.todo {
+  display: flex;
+  flex-direction: column;
+}
+  
+button {
+  font-size: 16px;
+  background-color: rgb(62, 138, 151);
+  color: #fff;
+  border-radius: 8px;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(173, 47, 28);
+}
+button:active {
+  background-color: rgb(130,35,21);
+}
+button:focus {
+  outline: 0;
+}
+input[type='text'] { font-size: 20px; font-family: monospace; }
+.todo input[type="checkbox"] {
+  transform: scale(1.8) translateY(1px);
+  margin: 0 16px 0 0;
+  cursor: pointer;
+}
+.todo-text input {
+  padding: 4px;
+}
+.todo-text {
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 1cm;
+  display: flex;
+  align-self: center;
+}
+.todo-completed {
+  display: flex;
+  margin: 10px 0;
+}
+.todo-actions {
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#completed {
+  margin-left: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.App{
+  margin-left: 400px;
+  margin-bottom: 600px;
 }
 
-.card {
-  padding: 2em;
-}
+.todosListShow{
+  border: solid rgb(24, 24, 64);
+  margin: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: darkcyan;
+  margin-left: -40px;
 
-.read-the-docs {
-  color: #888;
 }
